Updated backend config

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ JWT_SECRET=hsu3h4jksd83kj2h4jskdf8
 # Admin login credentials
 ADMIN_USER=bafnatoys@gmail.com
 ADMIN_PASS=Admin123
+
+# Frontend allowed CORS origin (✅ apne frontend ka sahi domain dalna)
+FRONTEND_URL=https://rishi1234.vercel.app
