--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^7.8.7",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "openai": "^5.11.0"
+    "openai": "^5.11.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
