--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^1.41.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
@@ -21,6 +22,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "openai": "^5.11.0",
+    "razorpay": "^2.9.6",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
